--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 NODE_ENV=development
 PORT=8080
 
-MONGO_DB_URL=
+MONGO_DB_URL=mongodb+srv://thanhbinh:binh2004@cluster0.t4xyx.mongodb.net/notebook
+
+PRIVATE_KEY=fc87566d-6e52-4152-ac52-a55a550aa621
+EXPIRE_TIME=1h
