--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "license": "ISC",
   "dependencies": {
-    "dotenv": "16.4.5",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "ejs": "3.1.10",
-    "express": "4.19.2",
-    "mongoose": "8.4.4"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5"
   },
   "devDependencies": {
     "nodemon": "3.1.4"
