--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend nodejs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon ./src/server.js",
     "start": "nodemon ./src/server.js"
   },
@@ -26,6 +26,8 @@
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
-    "nodemon": "3.1.4"
+    "jest": "^29.7.0",
+    "nodemon": "3.1.4",
+    "supertest": "^7.0.0"
   }
 }
