--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "3.1.10",
     "express": "^4.21.2",
